 b=415285, win32 plugin printed is overprinted ; r=stuart